# CW8

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
docker/: app.sh
habit/: models.py  paginations.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
habit/management/commands/: populate_data.py
habit/migrations/: 0001_initial.py  0002_alter_habit_frequency.py  0003_alter_habit_frequency.py  0004_habit_date_of_creation_habit_notification_time_and_more.py  0005_habit_weekday.py  0006_alter_habit_reward.py  0007_habit_is_starting.py  0008_rename_date_of_creation_habit_date_of_start.py  0009_habit_notification.py  0010_alter_habit_notification.py
users/: models.py  permissions.py  pytest.ini  serializers.py  urls.py
users/management/commands/: add_superuser.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py  0003_alter_user_chat_id.py  0004_alter_user_chat_id.py
users/tests/: conftest.py  test_habit.py  test_validators.py
