[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["igor <zinovievigor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
celery = "^5.3.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
pytest = "^7.4.3"
django-filter = "^23.5"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
django = "4.2.5"
django-celery-beat = "^2.5.0"
django-restframework = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
